--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-scroll-glue": "~2.0.6"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
