--- a/bower.json
+++ b/bower.json
@@ -11,12 +11,15 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-scroll-glue": "~2.0.6"
+    "angular-scroll-glue": "~2.0.6",
+    "ngmap":"1.16.6"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "bitchizzApp"
+  "moduleName": "bitchizzApp",
+  "resolutions": {
+  }
 }
