--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,13 @@
     "angular-route": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-scroll-glue": "~2.0.6",
-    "ngmap":"1.16.6"
+    "angular-sanitize": "^1.3.0",
+    "ngmap": "1.16.6"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "bitchizzApp",
-  "resolutions": {
-  }
+  "moduleName": "bitchizzApp"
 }
