--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-touch": "^1.3.0",
     "angular-scroll-glue": "~2.0.6",
     "angular-sanitize": "^1.3.0",
+    "angular-bootstrap" : "1.1.0",
     "ngmap": "1.16.7"
   },
   "devDependencies": {
